--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -170,3 +170,33 @@
         @apply bg-background text-foreground;
     }
 }
+
+@layer components {
+    /* Global Vue TransitionGroup: "list" */
+
+    .list-enter-active {
+        transition: all 300ms cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    .list-leave-active {
+        /* Required to prevent "jumping" during item removal */
+        position: absolute !important;
+        width: 100%;
+        transition: all 200ms cubic-bezier(0.4, 0, 1, 1);
+        z-index: 0;
+    }
+
+    .list-move {
+        transition: transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+    }
+
+    .list-enter-from {
+        opacity: 0;
+        transform: scale(0.98) translateY(-10px);
+    }
+
+    .list-leave-to {
+        opacity: 0;
+        transform: scale(0.98) translateY(10px);
+    }
+}
